# Yapper

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.toml
docs/plans/: 2026-03-01-setup-wizard-and-optimizations-design.md  2026-03-01-setup-wizard-and-optimizations.md
hyprland/: yapper.conf
src/yapper/: audio.py  config.py  context.py  dictionary.py  formatter.py  hotkey.py  injector.py  main.py  notifications.py  platform.py  processor.py  setup.py  transcriber.py  vad.py
src/yapper_ctl/: cli.py
systemd/: yapper-llm.service  yapper.service
tests/: test_config.py  test_context.py  test_dictionary.py  test_formatter.py  test_injector.py  test_platform.py  test_setup.py
