[project]
name = "yapper"
version = "0.1.0"
description = "Local voice dictation daemon for Linux (Hyprland/Wayland)"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=2.0",
    "faster-whisper>=1.1",
    "httpx>=0.28",
]

[project.scripts]
yapper = "yapper.main:main"
yapper-ctl = "yapper_ctl.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yapper", "src/yapper_ctl"]
